--- a/galaxy.yml
+++ b/galaxy.yml
@@ -16,6 +16,7 @@ dependencies:
   community.mysql: 3.6.0
   kubernetes.core: 2.4.0
   openstack.cloud: ">=2.0.0"
+  serverscom.mitogen: 1.4.0
   vexxhost.ceph: 3.0.1
   vexxhost.kubernetes: ">=2.0.1"
 tags:
