--- a/playbooks/infrastructure.yml
+++ b/playbooks/infrastructure.yml
@@ -14,6 +14,7 @@
 
 - name: Deploy Infrastructure
   hosts: controllers
+  strategy: serverscom.mitogen.mitogen_linear
   become: true
   roles:
     - role: cert_manager
