--- a/playbooks/openstack.yml
+++ b/playbooks/openstack.yml
@@ -14,6 +14,7 @@
 
 - name: Deploy OpenStack
   hosts: controllers[0]
+  strategy: serverscom.mitogen.mitogen_linear
   become: true
   roles:
     - role: memcached
@@ -65,6 +66,7 @@
 
 - name: Configure operating system
   hosts: controllers:computes
+  strategy: serverscom.mitogen.mitogen_linear
   become: true
   roles:
     - role: lpfc
@@ -81,6 +83,7 @@
 
 - name: Deploy SDN
   hosts: controllers:computes
+  strategy: serverscom.mitogen.mitogen_linear
   become: true
   gather_facts: false
   roles:
@@ -98,6 +101,7 @@
         - ovn
 
 - hosts: controllers[0]
+  strategy: serverscom.mitogen.mitogen_linear
   become: true
   roles:
     - role: libvirt
@@ -148,6 +152,7 @@
         - openstack-exporter
 
 - hosts: controllers
+  strategy: serverscom.mitogen.mitogen_linear
   become: true
   roles:
     - role: openstack_cli
