--- a/playbooks/csi.yml
+++ b/playbooks/csi.yml
@@ -21,4 +21,4 @@
   environment:
     CEPH_CONTAINER_IMAGE: "{{ cephadm_image | default('quay.io/ceph/ceph:v' + (ceph_version | default('18.2.7'))) }}"
     CEPH_CONTAINER_BINARY: docker
-    ENABLE_TURBO_MODE: "1"
+    ENABLE_TURBO_MODE: "true"
