--- a/playbooks/openstack.yml
+++ b/playbooks/openstack.yml
@@ -62,7 +62,7 @@
   environment:
     CEPH_CONTAINER_IMAGE: "{{ cephadm_image | default('quay.io/ceph/ceph:v' + (ceph_version | default('18.2.7'))) }}"
     CEPH_CONTAINER_BINARY: docker
-    ENABLE_TURBO_MODE: "1"
+    ENABLE_TURBO_MODE: "true"
 
 - name: Configure operating system
   hosts: controllers:computes
@@ -98,7 +98,7 @@
       tags:
         - ovn
   environment:
-    ENABLE_TURBO_MODE: "1"
+    ENABLE_TURBO_MODE: "true"
 
 - hosts: controllers[0]
   become: true
@@ -150,7 +150,7 @@
       tags:
         - openstack-exporter
   environment:
-    ENABLE_TURBO_MODE: "1"
+    ENABLE_TURBO_MODE: "true"
 
 - hosts: controllers
   become: true
