✨ feat: add support for switching OpenStackCluster filter to ID transition (#2681)
(cherry picked from commit 7e700e6308bbd794e51dda5a75bf299bf36a522c)
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: "^(roles/kube_prometheus_stack/files/jsonnet|charts)"
+exclude: "^(roles/kube_prometheus_stack/files/jsonnet|charts|patches/)"
 
 repos:
   - repo: local
