--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - stable/.*
 
 permissions: {}
 
@@ -58,3 +59,66 @@ jobs:
         with:
           fetch-depth: 0
       - uses: ./.github/actions/build
+
+  images:
+    runs-on: ubuntu-latest
+    concurrency:
+      group: images-push-${{ github.ref }}
+      cancel-in-progress: false
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+      - uses: depot/setup-action@v1
+      - uses: depot/bake-action@v1
+        id: bake
+        with:
+          project: jd10vkmkwv
+          save: ${{ github.event_name == 'pull_request' }}
+          push: ${{ github.event_name != 'pull_request' }}
+        env:
+          TAG: ${{ github.event_name == 'pull_request' && github.base_ref || github.ref_name }}
+    outputs:
+      build-id: ${{ steps.bake.outputs.build-id }}
+
+  csi:
+    runs-on: ubuntu-22.04
+    if: ${{ github.event_name == 'pull_request' }}
+    strategy:
+      fail-fast: false
+      matrix:
+        csi_driver:
+          - local-path-provisioner
+          - rbd
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: ./.github/actions/molecule
+        with:
+          scenario: csi
+          csi_driver: ${{ matrix.csi_driver }}
+
+  aio:
+    runs-on: vexxhost-ubuntu-22.04-16
+    if: ${{ github.event_name == 'pull_request' }}
+    concurrency:
+      group: ${{ github.job }}-${{ matrix.network_backend }}-${{ github.event.pull_request.number }}
+      cancel-in-progress: true
+    permissions:
+      id-token: write
+      contents: read
+    needs:
+      - images
+    strategy:
+      fail-fast: false
+      matrix:
+        network_backend:
+          - openvswitch
+          - ovn
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: ./.github/actions/molecule
+        with:
+          scenario: aio
+          network_backend: ${{ matrix.network_backend }}
+          depot_build_id: ${{ needs.images.outputs.build-id }}
