--- a/molecule/aio/prepare.yml
+++ b/molecule/aio/prepare.yml
@@ -12,7 +12,7 @@
 # License for the specific language governing permissions and limitations
 # under the License.
 
-- name: Configure hostname
+- name: Prepare systems for CI
   hosts: all
   tasks:
     - name: Configure short hostname
@@ -24,6 +24,56 @@
         path: /etc/hosts
         regexp: '^127\.0\.1\.1'
         line: 127.0.1.1 {{ inventory_hostname }} {{ inventory_hostname_short }}
+
+    - name: Pull built images in CI
+      when:
+        - lookup('env', 'DEPOT_TOKEN') is defined and lookup('env', 'DEPOT_TOKEN') != ''
+        - lookup('env', 'DEPOT_BUILD_ID') is defined and lookup('env', 'DEPOT_BUILD_ID') != ''
+      block:
+        - name: Install "containerd"
+          ansible.builtin.include_role:
+            name: vexxhost.containers.containerd
+
+        - name: Install "containerd"
+          ansible.builtin.include_role:
+            name: vexxhost.containers.containerd
+
+        - name: Get list of all Depot images for build
+          no_log: true
+          ansible.builtin.uri:
+            method: POST
+            url: https://api.depot.dev/depot.cli.v1.BuildService/GetPullInfo
+            body_format: json
+            headers:
+              Authorization: "Bearer {{ lookup('env', 'DEPOT_TOKEN') }}"
+            body:
+              build_id: "{{ lookup('env', 'DEPOT_BUILD_ID') }}"
+          register: depot_get_pull_info
+
+        - name: Pull all images to "containerd"
+          no_log: true
+          ansible.builtin.command:
+            cmd: ctr image pull -u {{ depot_get_pull_info.json.username }}:{{ depot_get_pull_info.json.password }} {{ depot_get_pull_info.json.reference }}-{{ item.targetName }}
+          loop: "{{ depot_get_pull_info.json.options | selectattr('save', 'equalto', true) | selectattr('tags', 'defined') }}"
+          loop_control:
+            label: "{{ item.tags[0] }}"
+          register: depot_pull_images
+
+        - name: Tag pulled images
+          ansible.builtin.command:
+            cmd: ctr image tag {{ depot_get_pull_info.json.reference }}-{{ item.targetName }} {{ item.tags[0] | replace('harbor.atmosphere.dev', 'registry.atmosphere.dev') }}
+          loop: "{{ depot_pull_images.results | map(attribute='item') }}"
+          loop_control:
+            label: "{{ item.tags[0] }}"
+
+        - name: Get list of all images
+          ansible.builtin.command:
+            cmd: ctr image ls -q
+          register: image_list
+
+        - name: Print list of pulled images
+          ansible.builtin.debug:
+            msg: "{{ image_list.stdout_lines }}"
 
 - name: Create fake devices for Ceph
   ansible.builtin.import_playbook: vexxhost.ceph.create_fake_devices
