--- a/molecule/aio/prepare.yml
+++ b/molecule/aio/prepare.yml
@@ -53,7 +53,7 @@
         - name: Pull all images to "containerd"
           no_log: true
           ansible.builtin.command:
-            cmd: ctr image pull -u {{ depot_get_pull_info.json.username }}:{{ depot_get_pull_info.json.password }} {{ depot_get_pull_info.json.reference }}-{{ item.targetName }}
+            cmd: ctr -n="k8s.io" image pull -u {{ depot_get_pull_info.json.username }}:{{ depot_get_pull_info.json.password }} {{ depot_get_pull_info.json.reference }}-{{ item.targetName }}
           loop: "{{ depot_get_pull_info.json.options | selectattr('save', 'equalto', true) | selectattr('tags', 'defined') }}"
           loop_control:
             label: "{{ item.tags[0] }}"
@@ -61,14 +61,14 @@
 
         - name: Tag pulled images
           ansible.builtin.command:
-            cmd: ctr image tag {{ depot_get_pull_info.json.reference }}-{{ item.targetName }} {{ item.tags[0] | replace('harbor.atmosphere.dev', 'registry.atmosphere.dev') }}
+            cmd: ctr -n="k8s.io" image tag {{ depot_get_pull_info.json.reference }}-{{ item.targetName }} {{ item.tags[0] | replace('harbor.atmosphere.dev', 'registry.atmosphere.dev') }}
           loop: "{{ depot_pull_images.results | map(attribute='item') }}"
           loop_control:
             label: "{{ item.tags[0] }}"
 
         - name: Get list of all images
           ansible.builtin.command:
-            cmd: ctr image ls -q
+            cmd: ctr -n="k8s.io" image ls -q
           register: image_list
 
         - name: Print list of pulled images
