--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -98,6 +98,15 @@ jobs:
           scenario: csi
           csi_driver: ${{ matrix.csi_driver }}
 
+  keycloak:
+    runs-on: ubuntu-22.04
+    if: ${{ github.event_name == 'pull_request' }}
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: ./.github/actions/molecule
+        with:
+          scenario: keycloak
+
   aio:
     runs-on: vexxhost-ubuntu-22.04-16
     if: ${{ github.event_name == 'pull_request' }}
