--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -17,28 +17,15 @@
       jobs:
         - atmosphere-tox-helm-unittest
         - atmosphere-tox-py3
-        - atmosphere-molecule-aio-keycloak:
-            dependencies: &image_build_jobs
-              - name: atmosphere-build-images
-                soft: true
-        - atmosphere-molecule-aio-ovn-bgp-agent:
-            dependencies: *image_build_jobs
+        # - atmosphere-molecule-aio-ovn-bgp-agent
     gate:
       jobs:
+        - atmosphere-tox-helm-unittest
         - atmosphere-tox-py3
-        - atmosphere-build-images
-        - atmosphere-molecule-aio-keycloak:
-            dependencies: *image_build_jobs
-        - atmosphere-molecule-aio-ovn-bgp-agent:
-            dependencies: *image_build_jobs
-    promote:
-      jobs:
-        - atmosphere-promote-images
+        # - atmosphere-molecule-aio-ovn-bgp-agent
     periodic:
       jobs:
         - atmosphere-molecule-aio-upgrade-openvswitch:
-            dependencies: *image_build_jobs
         - atmosphere-molecule-aio-upgrade-ovn:
-            dependencies: *image_build_jobs
     vars:
       container_registry: harbor.atmosphere.dev/library
