--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -71,7 +71,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: depot/setup-action@v1
+      - run: echo tag=$(echo ${{ github.event_name == 'pull_request' && github.base_ref || github.ref_name }} | cut -d'/' -f2) >> $GITHUB_OUTPUT
+        id: image_info
       - uses: docker/login-action@v3
+        if: ${{ github.event_name != 'pull_request' }}
         with:
           registry: harbor.atmosphere.dev
           username: ${{ secrets.HARBOR_USERNAME }}
@@ -83,7 +86,7 @@ jobs:
           save: ${{ github.event_name == 'pull_request' }}
           push: ${{ github.event_name != 'pull_request' }}
         env:
-          TAG: ${{ github.event_name == 'pull_request' && github.base_ref || github.ref_name }}
+          TAG: ${{ steps.image_info.outputs.tag }}
     outputs:
       build-id: ${{ steps.bake.outputs.build-id }}
 
@@ -106,6 +109,9 @@ jobs:
   keycloak:
     runs-on: vexxhost-ubuntu-22.04-4
     if: ${{ github.event_name == 'pull_request' }}
+    concurrency:
+      group: ${{ github.job }}-${{ github.event.pull_request.number }}
+      cancel-in-progress: true
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: ./.github/actions/molecule
