--- a/roles/cluster_issuer/tasks/type/acme/solver/cloudflare.yml
+++ b/roles/cluster_issuer/tasks/type/acme/solver/cloudflare.yml
@@ -45,21 +45,37 @@
               api-token: "{{ api_token }}"
       when: secret_exists
 
-# TODO: Helm chart atmosphere.common for external-secrets and k8s secret creation
+# TODO: Use 'atmosphere.common' helm chart for external-secrets and other k8s resource creation
+# For now mimic helm chart logic with plain manifests
+#
+# helm:
+#   secrets:
+#   - name: "{{ cluster_issuer_acme_cloudflare_secret_name }}"
+#     values:
+#       api-token: cert-manager/issuers/cloudflare/api-token
 
-- name: Create ClusterIssuer
+- name: Create ClusterIssuer (ExternalSecret)
   run_once: true
   kubernetes.core.k8s:
     state: present
     definition:
-      - apiVersion: v1
-        kind: Secret
+      - apiVersion: external-secrets.io/v1
+        kind: ExternalSecret
         metadata:
-          name: "{{ cluster_issuer_acme_cloudflare_secret_name }}"
           namespace: cert-manager
-        type: Opaque
-        stringData:
-          api-token: "{{ cluster_issuer_acme_cloudflare_api_token }}"
+          name: "{{ cluster_issuer_acme_cloudflare_secret_name }}-secret" # Mimic helm chart format for simple secrets
+        spec:
+          refreshInterval: "60s"
+          secretStoreRef:
+            name: atmosphere # Mimic helm chart default secret store name and type
+            kind: ClusterSecretStore
+          target:
+            name: "{{ cluster_issuer_acme_cloudflare_secret_name }}-secret" # Mimic helm chart format for simple secrets
+          data:
+          - secretKey: api-token
+            remoteRef:
+              key: cert-manager/issuers/cloudflare
+              property: api-token
 
       - apiVersion: cert-manager.io/v1
         kind: ClusterIssuer
@@ -76,5 +92,37 @@
                   cloudflare:
                     email: "{{ cluster_issuer_acme_cloudflare_email }}"
                     apiTokenSecretRef:
-                      name: "{{ cluster_issuer_acme_cloudflare_secret_name }}"
+                      name: "{{ cluster_issuer_acme_cloudflare_secret_name }}-secret"
                       key: api-token
+
+# - name: Create ClusterIssuer (old method)
+#   run_once: true
+#   kubernetes.core.k8s:
+#     state: present
+#     definition:
+#       - apiVersion: v1
+#         kind: Secret
+#         metadata:
+#           name: "{{ cluster_issuer_acme_cloudflare_secret_name }}"
+#           namespace: cert-manager
+#         type: Opaque
+#         stringData:
+#           api-token: "{{ cluster_issuer_acme_cloudflare_api_token }}"
+
+#       - apiVersion: cert-manager.io/v1
+#         kind: ClusterIssuer
+#         metadata:
+#           name: "{{ cluster_issuer_name }}"
+#         spec:
+#           acme:
+#             email: "{{ cluster_issuer_acme_email }}"
+#             server: "{{ cluster_issuer_acme_server }}"
+#             privateKeySecretRef:
+#               name: "{{ cluster_issuer_acme_private_key_secret_name }}"
+#             solvers:
+#               - dns01:
+#                   cloudflare:
+#                     email: "{{ cluster_issuer_acme_cloudflare_email }}"
+#                     apiTokenSecretRef:
+#                       name: "{{ cluster_issuer_acme_cloudflare_secret_name }}"
+#                       key: api-token
