--- a/images/manila/Dockerfile
+++ b/images/manila/Dockerfile
@@ -5,7 +5,7 @@
 FROM openstack-venv-builder AS build
 # renovate: name=openstack/manila repo=https://github.com/openstack/manila.git branch=master
 ARG MANILA_GIT_REF=5fadf50c80dddd6c1cb167fd1d10debd5092fe0e
-ADD --keep-git-dir=true https://github.com/openstackmanila.git#${MANILA_GIT_REF} /src/manila
+ADD --keep-git-dir=true https://github.com/openstack/manila.git#${MANILA_GIT_REF} /src/manila
 RUN git -C /src/manila fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
 uv pip install \
