[Manila] Use module for manila wsgi
Manila WSGI script has been removed [1].
[1] https://review.opendev.org/c/openstack/manila/+/949164

Change-Id: I587a4b3ddf4fd6fdf2db8adc14ae9b08ce6723b8
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/charts/manila/values.yaml
+++ b/charts/manila/values.yaml
@@ -838,7 +838,7 @@ conf:
       socket-timeout: 10
       thunder-lock: true
       worker-reload-mercy: 80
-      wsgi-file: /var/lib/openstack/bin/manila-wsgi
+      module: "manila.wsgi.api:application"
 
 # Names of secrets used by bootstrap and environmental checks
 secrets:
