--- a/charts/octavia/values.yaml
+++ b/charts/octavia/values.yaml
@@ -366,7 +366,7 @@ conf:
       socket-timeout: 10
       thunder-lock: true
       worker-reload-mercy: 80
-      wsgi-file: /var/lib/openstack/bin/octavia-wsgi
+      module: "octavia.wsgi.api:application"
 
 secrets:
   identity:
