ensure necessary kernel modules are loaded
kernel module nvme are used in latest os_brick library
nbd module is required for Trilio snapshot mount and file search

Signed-off-by: Yaguang Tang <yaguang.tang@vexxhost.com>

--- a/playbooks/openstack.yml
+++ b/playbooks/openstack.yml
@@ -67,6 +67,10 @@
   hosts: controllers:computes
   become: true
   roles:
+    - role: kernel_modules
+      tags:
+        - kernel_modules
+
     - role: lpfc
       tags:
         - lpfc
