fix: add backend configuration for ngs coordination in neutron vars 🛠️
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/roles/neutron/vars/main.yml
+++ b/roles/neutron/vars/main.yml
@@ -48,6 +48,8 @@ __neutron_helm_values:
         region_name: "{{ openstack_helm_endpoints_neutron_region_name }}"
         username: "neutron-{{ openstack_helm_endpoints_neutron_region_name }}"
         password: "{{ openstack_helm_endpoints_neutron_keystone_password }}"
+      ngs_coordination:
+        backend_url: memcached://memcached.openstack.svc.cluster.local:11211
       nova:
         live_migration_events: true
       ironic:
