--- a/playbooks/kubernetes.yml
+++ b/playbooks/kubernetes.yml
@@ -41,11 +41,13 @@
 
     # (rico) there is dependency isuse with pyopenssl and cryptography before 22.1.0
     # This make sure we have consist dependency between them.
+    # Defaul cryptography are installed with Debian packages, so we might need to
+    # break system packages to install pyopenssl.
     - name: Upgrade pyopenssl in pip
       ansible.builtin.pip:
         name:
           - pyopenssl>=22.1.0
-        extra_args: --upgrade
+        extra_args: "--upgrade --break-system-packages"
 
 - import_playbook: vexxhost.kubernetes.site
   vars:
